--- a/.github/workflows/ci-browser.yml
+++ b/.github/workflows/ci-browser.yml
@@ -29,10 +29,12 @@ jobs:
       - name: Build project
         run: |
           if [[ "${{ github.ref_name }}" == "master" ]]; then
+            NODE_OPTIONS=--max-old-space-size=4096 \
             NX_BIN_URL=http://127.0.0.1:8080/assets/js/soljson \
             NX_WASM_URL=http://127.0.0.1:8080/assets/js/soljson \
             NX_NPM_URL=http://127.0.0.1:9090/ yarn build:production
           else
+            NODE_OPTIONS=--max-old-space-size=4096 \
             NX_BIN_URL=http://127.0.0.1:8080/assets/js/soljson \
             NX_WASM_URL=http://127.0.0.1:8080/assets/js/soljson \
             NX_NPM_URL=http://127.0.0.1:9090/ yarn build
