--- a/.github/workflows/ci-browser.yml
+++ b/.github/workflows/ci-browser.yml
@@ -75,7 +75,9 @@ jobs:
     strategy:
       matrix:
         browser: [chrome, firefox]
-        job: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+        job: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9,
+                  10, 11, 12, 13, 14, 15, 16, 17, 18, 19,
+                  20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -121,7 +123,7 @@ jobs:
 
       - run: yarn install_webdriver
 
-      - run: ./apps/remix-ide/ci/browser_test.sh ${{ matrix.browser }} 10 ${{ matrix.job }}
+      - run: ./apps/remix-ide/ci/browser_test.sh ${{ matrix.browser }} 30 ${{ matrix.job }}
 
       - name: Upload test results
         if: always()
