--- a/.github/workflows/ci-desktop-macos.yml
+++ b/.github/workflows/ci-desktop-macos.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   build-desktop:
+    needs: build-desktop  # 👈 this ensures proper sequencing
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -30,7 +31,7 @@ jobs:
         with:
           name: remix-desktop-dist
           path: persist/dist.tar.zst
-          
+
   test-desktop-macos:
     runs-on: macos-latest
     steps:
